--- a/config.org
+++ b/config.org
@@ -897,9 +897,27 @@ Protesilaos Stavrou has published his accessible [[https://gitlab.com/protesilao
             (border-mode-line-active blue-intense)
             (bg-region bg-magenta-intense)
             (fg-region fg-main)
-            (bg-paren-expression bg-cyan-intense)))
+            (bg-paren-expression bg-cyan-intense)
+            (bg-paren-match bg-cyan-intense)))
     :config
     (load-theme 'modus-vivendi :no-confirm))
+#+END_SRC
+
+#+BEGIN_SRC emacs-lisp
+  (use-package ef-themes
+    :ensure t
+    :init
+    (setq ef-themes-to-toggle '(ef-day ef-cherie))
+    (setq ef-themes-region '(intense))
+
+    (defun my-ef-themes ()
+    "Theme overrides."
+    (ef-themes-with-colors
+      (custom-set-faces
+       `(org-block-begin-line ((,c :background ,bg-main)))
+       `(org-block-end-line ((,c :background ,bg-main))))))
+
+    (add-hook 'ef-themes-post-load-hook #'my-ef-themes))
 #+END_SRC
 
 * elfeed
