--- a/config.org
+++ b/config.org
@@ -1650,17 +1650,21 @@ Prompted by [[https://www.masteringemacs.org/article/understanding-minibuffer-co
 #+END_SRC
 * paren managment
 #+BEGIN_SRC emacs-lisp
+  (defun js/inhibit-quote ()
+    (setq-local electric-pair-inhibit-predicate
+                `(lambda (c)
+                   (if (char-equal c ?\")
+                       t
+                     (,electric-pair-inhibit-predicate c)))))
+
+  (defun js/inhibit-quote-message-mode ()
+    (setq-local electric-pair-pairs nil))
+
   (electric-pair-mode 1)
   (show-paren-mode 1)
   (setq show-paren-style 'mixed)
-  (add-hook
-   'org-mode-hook
-   (lambda ()
-     (setq-local electric-pair-inhibit-predicate
-                 `(lambda (c)
-                    (if (char-equal c ?\")
-                        t
-                      (,electric-pair-inhibit-predicate c))))))
+  (add-hook 'org-mode-hook #'js/inhibit-quote)
+  (add-hook 'message-mode-hook #'js/inhibit-quote-message-mode)
 #+END_SRC
 * benchmark
 See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
