--- a/config.org
+++ b/config.org
@@ -1268,9 +1268,10 @@ Run ispell last
                        (org-agenda-overriding-header "Notes TODO"))))
       (add-to-list 'org-agenda-custom-commands
                '("q" "lean" tags
-                 "TODO=\"DONE\"&CLOSED>\"<-14d>\"|TODO=\"TODO\"&SCHEDULED>\"<-10y>\""
+                 "TODO=\"DONE\"&CLOSED>\"<-14d>\"-exclude|TODO=\"TODO\"&SCHEDULED>\"<-10y>\"-exclude"
                  ((org-agenda-files '("~/org/notes.org"))
-                  (org-agenda-sorting-strategy '(scheduled-up)))))
+                  (org-agenda-sorting-strategy '(scheduled-up))
+                  (org-agenda-prefix-format "%i            "))))
       (global-set-key (kbd "C-c a") (lambda () (interactive) (org-agenda "" "x")))
       (advice-add 'org-agenda-redo-all :after #'js/scroll-to-bottom)
       (setq org-latex-packages-alist '("\\usepackage{kpfonts}"
