Add keybinding for raise-sexp

--- a/config.org
+++ b/config.org
@@ -142,21 +142,23 @@ Explicitly set storage files.
 + Switch to help window see [[https://www.reddit.com/r/emacs/comments/ynr33i/comment/ivag10u/?utm_source=share&utm_medium=web2x&context=3][Reddit.]]
 
 #+BEGIN_SRC emacs-lisp
-      (setq column-number-mode t)
-      (delete-selection-mode t)
-      (setq require-final-newline t)
-      (setq-default indent-tabs-mode nil)
-      (setq set-mark-command-repeat-pop t)
-      (put 'upcase-region 'disabled nil)
-      (put 'downcase-region 'disabled nil)
-      (put 'dired-find-alternate-file 'disabled nil)
-      (put 'narrow-to-region 'disabled nil)
-      (setq dired-dwim-target t)
-      (setq reb-re-syntax 'string)
-      (setq delete-by-moving-to-trash t)
-      (global-set-key [remap eval-last-sexp] 'pp-eval-last-sexp)
-      (setq help-window-select t)
-      (global-set-key (kbd "C-c p") 'delete-pair)
+  (setq column-number-mode t)
+  (delete-selection-mode t)
+  (setq require-final-newline t)
+  (setq-default indent-tabs-mode nil)
+  (setq set-mark-command-repeat-pop t)
+  (put 'upcase-region 'disabled nil)
+  (put 'downcase-region 'disabled nil)
+  (put 'dired-find-alternate-file 'disabled nil)
+  (put 'narrow-to-region 'disabled nil)
+  (setq dired-dwim-target t)
+  (setq reb-re-syntax 'string)
+  (setq delete-by-moving-to-trash t)
+  (global-set-key [remap eval-last-sexp] 'pp-eval-last-sexp)
+  (setq help-window-select t)
+  (global-set-key (kbd "C-c p") 'delete-pair)
+  (global-set-key (kbd "C-c q") 'raise-sexp)
+
 #+END_SRC
 
 * font
@@ -1109,8 +1111,6 @@ Thank you to [[https://github.com/purcell/emacs.d/blob/master/lisp/init-elpa.el]
       (if arg
           (browse-url url)
         (eww-browse-url url))))
-
-  (global-set-key (kbd "C-c q") 'js/web-search)
 #+END_SRC
 
 * dumb-jump
