Use built in use-package

--- a/config.org
+++ b/config.org
@@ -43,7 +43,7 @@ virtualenv.
 * package repositories
 
 #+BEGIN_SRC emacs-lisp
-  (require 'package)
+  ;; (require 'package)
   (setq package-archives
         '(("gnu" . "https://elpa.gnu.org/packages/")
           ("melpa" . "https://melpa.org/packages/")))
@@ -55,13 +55,13 @@ virtualenv.
 [[https://github.com/jwiegley/use-package][use-package]] [[https://melpa.org/#/use-package][MELPA]]
 
 #+BEGIN_SRC emacs-lisp
-  (unless package--initialized
-    (package-initialize))
-  (unless (package-installed-p 'use-package)
-    (package-refresh-contents)
-    (package-install 'use-package))
+  ;; (unless package--initialized
+  ;;   (package-initialize))
+  ;; (unless (package-installed-p 'use-package)
+  ;;   (package-refresh-contents)
+  ;;   (package-install 'use-package))
 
-  (require 'use-package)
+  ;; (require 'use-package)
 #+END_SRC
 
 
