--- a/config.org
+++ b/config.org
@@ -1320,6 +1320,57 @@ Run ispell last
   (global-set-key (kbd "C-c j") 'js/outline)
 #+END_SRC
 
+#+BEGIN_SRC emacs-lisp
+  (defun js/outline-toggle-children ()
+    "Show or hide the current subtree depending on its current state."
+    (interactive)
+    (save-excursion
+      (outline-back-to-heading)
+      (if (not (outline-invisible-p (line-end-position)))
+          (outline-hide-subtree)
+        (outline-show-subtree))))
+
+  (defun js/outline-cycle-buffer (&optional level)
+    "Cycle visibility state of the body lines of the whole buffer.
+
+  This cycles the visibility of all the subheadings and bodies of all
+  the heading lines in the buffer.  It cycles them between `hide all',
+  and `show all'.
+
+  `Hide all' means hide all the buffer's subheadings and their bodies.
+  `Show all' means show all the buffer's subheadings and their bodies.
+
+  With a prefix argument, show headings up to that LEVEL."
+    (interactive (list (when current-prefix-arg
+                         (prefix-numeric-value current-prefix-arg))))
+    (let (top-level)
+      (save-excursion
+        (goto-char (point-min))
+        (while (not (or (eq top-level 1) (eobp)))
+          (when-let ((level (and (outline-on-heading-p t)
+                                 (funcall outline-level))))
+            (when (< level (or top-level most-positive-fixnum))
+              (setq top-level (max level 1))))
+          (outline-next-heading)))
+      (cond
+       (level
+        (outline-hide-sublevels level)
+        (setq outline--cycle-buffer-state 'all-heading)
+        (message "All headings up to level %s" level))
+       ((and (eq outline--cycle-buffer-state 'show-all)
+             top-level)
+        (outline-hide-sublevels top-level)
+        (setq outline--cycle-buffer-state 'top-level)
+        (message "Top level headings"))
+       (t
+        (outline-show-all)
+        (setq outline--cycle-buffer-state 'show-all)
+        (message "Show all")))))
+
+  (define-key outline-minor-mode-map (kbd "<f7>") #'js/outline-toggle-children)
+  (define-key outline-minor-mode-map (kbd "<f8>") #'js/outline-cycle-buffer)
+#+END_SRC
+
 * graphviz
 
 [[https://graphviz.org/][Graphviz]]
@@ -1712,7 +1763,7 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
 #+BEGIN_SRC emacs-lisp
   (defun js/negate-raw-prefix (arg)
     "Negate raw prefix ARG."
-  
+
     ;; (= (prefix-numeric-value 43) (- (prefix-numeric-value (js/negate-raw-prefix 43))))
     ;; (= (prefix-numeric-value '-) (- (prefix-numeric-value (js/negate-raw-prefix '-))))
     ;; (= (prefix-numeric-value '(4)) (- (prefix-numeric-value (js/negate-raw-prefix '(4)))))
