--- a/config.org
+++ b/config.org
@@ -1794,11 +1794,11 @@ See [[https://www.emacswiki.org/emacs/EmacsLispBenchmark][EmacsWiki]].
            (dir (file-name-directory filename))
            (ext (or (file-name-extension filename) ""))
            (today (format-time-string "%Y-%m-%d"))
-           (job (or (get-register ?j) ""))
+           (job (or (get-register ?J) ""))
            (job-or-project (read-string (format "Project (%s): " job) nil nil job))
            (job-text (if (not (string-empty-p job-or-project)) (concat job-or-project "_") ""))
            (date (read-string (format "Date (%s): " today) nil nil today))
-           (comment (read-string (format "Comment (%s): " file)))
+           (comment (read-string (format "Comment (%s): " file) nil nil file))
            (new-filename (concat dir date "_" job-text comment "." ext)))
       (rename-file filename new-filename 1)
       (message "File renamed to %s" new-filename)))
