--- a/git.org
+++ b/git.org
@@ -30,6 +30,7 @@ Inject email and name.
 [alias]
         dft = difftool
         glog = log --graph --decorate --pretty=oneline --abbrev-commit
+        list-changed = diff --name-only --diff-filter d
 
 [commit]
         template = ~/.gitmessage
